--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "@types/jest": "^26.0.24",
-    "@types/node": "^12.20.36",
     "@types/react": "^17.0.34",
     "@types/react-dom": "^17.0.11",
     "@types/react-redux": "^7.1.20",
+    "@types/react-transition-group": "^4.4.4",
+    "@types/styled-components": "^5.1.15",
     "axios": "^0.24.0",
     "dotenv": "^10.0.0",
     "formik": "^2.2.9",
@@ -22,7 +23,9 @@
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^6.0.1",
     "react-scripts": "4.0.3",
+    "react-transition-group": "^4.4.2",
     "redux-typescript": "^1.2.1",
     "styled-components": "^5.3.3",
     "typescript": "^4.4.4",
@@ -49,6 +52,7 @@
     ]
   },
   "devDependencies": {
+    "@types/node": "^16.11.6",
     "autoprefixer": "^9.8.8",
     "eslint": "^7.32.0",
     "eslint-config-airbnb": "^18.2.1",
