--- a/package.json
+++ b/package.json
@@ -9,12 +9,6 @@
     "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
-    "@types/jest": "^26.0.24",
-    "@types/react": "^17.0.34",
-    "@types/react-dom": "^17.0.11",
-    "@types/react-redux": "^7.1.20",
-    "@types/react-transition-group": "^4.4.4",
-    "@types/styled-components": "^5.1.15",
     "axios": "^0.24.0",
     "dotenv": "^10.0.0",
     "formik": "^2.2.9",
@@ -24,12 +18,13 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
-    "react-router-dom": "^6.0.1",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "react-transition-group": "^4.4.2",
     "redux-typescript": "^1.2.1",
     "styled-components": "^5.3.3",
     "typescript": "^4.4.4",
+    "uuid": "^8.3.2",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
@@ -53,7 +48,14 @@
     ]
   },
   "devDependencies": {
+    "@types/jest": "^27.0.2",
     "@types/node": "^16.11.6",
+    "@types/react": "^17.0.34",
+    "@types/react-dom": "^17.0.11",
+    "@types/react-redux": "^7.1.20",
+    "@types/react-router-dom": "^5.3.2",
+    "@types/react-transition-group": "^4.4.4",
+    "@types/styled-components": "^5.1.15",
     "autoprefixer": "^9.8.8",
     "eslint": "^7.32.0",
     "eslint-config-airbnb": "^18.2.1",
